Adding a comma before the query params in the Angular vendors search component template.

--- a/app/frontend/src/app/pages/search/tbl-vendors.component.html
+++ b/app/frontend/src/app/pages/search/tbl-vendors.component.html
@@ -6,7 +6,7 @@
   </div>
   <div>
     <h3 class="alt">
-      <a href="csv/vendors{{params}}" class="pull-right" target="_blank">
+      <a href="csv/vendors?{{params}}" class="pull-right" target="_blank">
         Download vendor data(CSV)</a
       ><strong>{{ items_total }} vendors</strong> meet your criteria.
     </h3>
