Adding a non-breaking space character to force div width in the Angular frontend pss contract display.

--- a/app/frontend/src/app/pages/contract-vehicles/pss.component.html
+++ b/app/frontend/src/app/pages/contract-vehicles/pss.component.html
@@ -7,7 +7,7 @@
 
 <section class="usa-section">
   <div class="usa-grid">
-    <div class="usa-width-one-sixth"></div>
+    <div class="usa-width-one-sixth">&nbsp;</div>
     <div class="usa-width-one-half">
       <p class="usa-font-lead">The Professional Services Schedule (PSS) is an indefinite delivery/indefinite quantity
         (IDIQ) multiple award schedule, providing direct access to simple or complex fixed-price or labor-hour
