HCATS contract Page Updates And UI Updates

--- a/app/frontend/src/app/pages/contract-vehicles/hcats.component.html
+++ b/app/frontend/src/app/pages/contract-vehicles/hcats.component.html
@@ -35,7 +35,7 @@
       </ul>
     </div>
     <div class="usa-width-one-fourth">
-      <h3>OASIS Links:</h3>
+      <h3>HCATS Links:</h3>
       <ul>
         <li><a href="https://www.gsa.gov/acquisition/products-services/human-capital/human-capital-and-training-solutions"
             target="_blank">HCaTS Home Page</a></li>
