--- a/app/frontend/src/app/pages/contract-vehicles/oasis-sb-info.component.html
+++ b/app/frontend/src/app/pages/contract-vehicles/oasis-sb-info.component.html
@@ -33,7 +33,7 @@
       </ul>
     </div>
     <div class="usa-width-one-fourth">
-      <h3>OASIS Links:</h3>
+      <h3>HCATS Links:</h3>
       <ul>
         <li><a href="mailto:oasiscustomersupport@gsa.gov">OASIS Customer Support</a></li>
         <li><a href="https://www.gsa.gov/cdnstatic/CONSOLIDATED_OASIS_U_SB_Ordering_Guide_8-15-2018.pdf" target="_blank">OASIS
