--- a/app/frontend/src/app/pages/search/tbl-contract-history.component.html
+++ b/app/frontend/src/app/pages/search/tbl-contract-history.component.html
@@ -175,10 +175,7 @@
               e-mail</a></span></td>
         <td><strong class="db">{{contract?.agency?.name | titlecase}}</strong></td>
 
-        <td>{{contract?.obligated_amount | currency: 'USD' : 'symbol' : '1.0'}}
-          <div *ngIf="contract && contract.obligated_amount">
-              <br>
-          </div>
+        <td>{{contract?.obligated_amount | currency: 'USD' : 'symbol' : '1.0'}}<br>
           {{contract.pricing_type?.name}}
         </td>
         <td [innerHTML]="setPoP(contract.place_of_performance)"></td>
