--- a/app/frontend/src/app/pages/contract-vehicles/bmo-info.component.html
+++ b/app/frontend/src/app/pages/contract-vehicles/bmo-info.component.html
@@ -32,7 +32,8 @@
       <h3>BMO Service Categories</h3>
       <div *ngIf="pools.length===0">Loading...</div>
       <ul *ngIf="pools.length>0" class="usa-font-lead">
-        <li *ngFor="let pool of pools"><a (click)="routeToLink(pool, 'BMO__BMO_SB', 'BMO_{pool_id}__BMO_SB_{pool_id}')">{{pool.number}} - {{pool.name}}</a></li>
+        <li *ngFor="let pool of pools"><a [routerLink]="['/search']" [queryParams]="{vehicles: 'BMO', service_categories: pool.id}">
+            {{pool.number}} - {{pool.name}}</a></li>
       </ul>
     </div>
     <div class="usa-width-one-fourth">
