Removed Extra http

--- a/app/frontend/src/app/pages/search/vendor-detail.component.html
+++ b/app/frontend/src/app/pages/search/vendor-detail.component.html
@@ -72,7 +72,7 @@
                 <div class="usa-width-one-whole">
                   <h6 class="usa-heading-alt">Vendor website:</h6>
                   <blockquote>
-                    <a href="//{{vendor?.sam_url}}" target="_blank">{{
+                    <a href="{{vendor?.sam_url}}" target="_blank">{{
                       vendor?.sam_url
                     }}</a>
                   </blockquote>
