Fix filter logic: Contract Vehicle and Service Category

--- a/app/frontend/src/app/pages/search/filters.component.html
+++ b/app/frontend/src/app/pages/search/filters.component.html
@@ -82,6 +82,7 @@
           [items]="vehicles"
           (emmitSelected)="activateSubmit($event)"
           (emmitItem)="filterOthersByVehicles($event)"
+          (emmitVehicle)="removeServiceCategories($event)"
           (emmitLoaded)="getResults($event)"
         ></discovery-filter-contract-vehicles>
       </li>
